# serializer version: 1
# name: test_device_scanner_created
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Banana',
      'host_name': 'testhost',
      'ip': '192.168.1.102',
      'mac': '2C-71-FF-ED-34-83',
      'source_type': <SourceType.ROUTER: 'router'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.banana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_scanner_created_with_default_name
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '2C-71-FF-ED-34-83',
      'host_name': 'testhost',
      'ip': '192.168.1.102',
      'mac': '2C-71-FF-ED-34-83',
      'source_type': <SourceType.ROUTER: 'router'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.2c_71_ff_ed_34_83',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_scanner_update_to_away_nulls_properties
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Banana',
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.banana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_device_tracker_created
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Apple',
      'source_type': <SourceType.ROUTER: 'router'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.apple',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Spare Room',
  })
# ---
# name: test_device_tracker_update_to_away_nulls_properties
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Apple',
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.apple',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
